--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,21 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ===================
+# Project-specific
+# ===================
+
+# Data directories (large files, downloaded datasets)
+data/*
+!data/.gitkeep
+
+# Training outputs (checkpoints, logs)
+outputs/*
+!outputs/.gitkeep
+
+# W&B logs
+wandb/
+
+# Setuptools build artifacts
+src/*.egg-info/
