Add initial project structure for Tunix Hack, including environment setup, data handling, model training, and inference utilities. Introduced example environment file, updated .gitignore, and created Jupyter notebooks for SFT warmup and GRPO training. Implemented XML parsing utilities and reward functions for GRPO training.

--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,9 @@ __marimo__/
 # Project-specific
 # ===================
 
+# Temporary files (TensorBoard logs, intermediate checkpoints)
+tmp/
+
 # Data directories (large files, downloaded datasets)
 data/*
 !data/.gitkeep
